[project]
name = "arxiv-researcher-live"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "", email = ""},
]
dependencies = ["arxiv>=2.2.0", "llama-index>=0.12.52", "python-dotenv>=1.1.1", "notebook>=7.4.4"]
requires-python = "==3.12.*"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false
